# Dual-Target-Embedded-C-Library-with-Automated-GitHub-Actions-CI-CD

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  test_report.txt
.github/workflows/: ci.yml
build_embedded/: DualTargetCLibrary.slnx
build_embedded/app.dir/Debug/: app.exe.recipe
build_embedded/app.dir/Debug/app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_embedded/mathlib.dir/Debug/: mathlib.lib.recipe
build_embedded/mathlib.dir/Debug/mathlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  mathlib.lastbuildstate
build_embedded/test_app.dir/Debug/: test_app.exe.recipe
build_embedded/test_app.dir/Debug/test_app.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_embedded/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  index.html  mathlib_8h_source.html  navtreedata.js  navtreeindex0.js  platform_8h_source.html
examples/: embedded_main.c  main.c
include/: mathlib.h  platform.h
platform/embedded/: platform_embedded.c
platform/host/: platform_host.c
src/: mathlib.c
tests/: test_mathlib.c
(+4 files in other folders)
